fixed a weird bug with the blog content going off-screen due to a flexbox

--- a/src/screens/Blog/Blog.css
+++ b/src/screens/Blog/Blog.css
@@ -16,6 +16,7 @@
 	flex-grow: 1;
 	flex-basis: 0%;
 	position: relative;
+	width: 100%;
 }
 .blogContent p {
 	line-height: 1.5em;
